--- a/src/Lsw.Abp.BackgroundWorkers.Hangfire/Lsw.Abp.BackgroundWorkers.Hangfire.csproj
+++ b/src/Lsw.Abp.BackgroundWorkers.Hangfire/Lsw.Abp.BackgroundWorkers.Hangfire.csproj
@@ -12,6 +12,7 @@
         <RepositoryUrl>https://github.com/liangshiw/Lsw.Abp.BackgroundWorkers.Hangfire</RepositoryUrl>
         <RepositoryType>github</RepositoryType>
         <PackageTags>abp,backgroundworker,hangfire</PackageTags>
+        <PackageIconUrl>https://raw.githubusercontent.com/liangshiw/Lsw.Abp.BackgroundWorkers.Hangfire/master/lswabp.png</PackageIconUrl>
     </PropertyGroup>
 
     <ItemGroup>
