--- a/src/Lsw.Abp.BackgroundWorkers.Hangfire/Lsw.Abp.BackgroundWorkers.Hangfire.csproj
+++ b/src/Lsw.Abp.BackgroundWorkers.Hangfire/Lsw.Abp.BackgroundWorkers.Hangfire.csproj
@@ -13,6 +13,7 @@
         <RepositoryType>github</RepositoryType>
         <PackageTags>abp,backgroundworker,hangfire</PackageTags>
         <PackageIconUrl>https://raw.githubusercontent.com/liangshiw/Lsw.Abp.BackgroundWorkers.Hangfire/master/lswabp.png</PackageIconUrl>
+        <Version>1.1.0</Version>
     </PropertyGroup>
 
     <ItemGroup>
